<resources>
    <string name="app_name">Water Sensor App</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="disconnect">Disconnect</string>
    <string name="ping">Ping</string>
    <string name="ping_command">Ping</string>
    <string name="wifi_command">Wi-Fi</string>
    <string name="email_command">Email</string>
    <string name="email_restart">Restart</string>
    <string name="restart">Restart</string>
    <string name="mode_command">Change mode</string>
    <string name="online_statistics_command">Online statistics</string>
    <string name="title_activity_smtp">SmtpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="smtp_port_prompt">SMTP port</string>
    <string-array name="possible_smtp_ports">
        <item>25</item>
        <item>465</item>
        <item>587</item>
    </string-array>

    <string name="imap_port_prompt">IMAP port</string>
    <string-array name="possible_imap_ports">
        <item>143</item>
        <item>993</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="home_second">Home Second</string>
    <string name="title_settings_email">Email</string>
    <string name="title_settings_wifi">WiFi</string>
    <string name="title_settings_common">Common</string>
    <string name="navigation_settings_sensor">Sensor</string>
    <string name="title_settings_sensor">Sensor</string>
    <string name="left_notification_border">Left border</string>
    <string name="right_notification_border">Right border</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
</resources>
