<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_settings_common">

    <fragment
            android:id="@+id/navigation_settings_common"
            android:name="com.zakhar.watersensorapp.activities.device.fragments.common.CommonFragment"
            android:label="@string/title_settings_common"
            tools:layout="@layout/fragment_settings_common"/>

    <fragment
            android:id="@+id/navigation_settings_wifi"
            android:name="com.zakhar.watersensorapp.activities.device.fragments.wifi.WifiFragment"
            android:label="@string/title_settings_wifi"
            tools:layout="@layout/fragment_settings_wifi"/>

    <fragment
            android:id="@+id/navigation_settings_email"
            android:name="com.zakhar.watersensorapp.activities.device.fragments.email.EmailFragment"
            android:label="@string/title_settings_email"
            tools:layout="@layout/fragment_settings_email"/>

    <fragment
            android:id="@+id/navigation_settings_sensor"
            android:name="com.zakhar.watersensorapp.activities.device.fragments.sensor.SensorFragment"
            android:label="@string/title_settings_sensor"
            tools:layout="@layout/fragment_settings_sensor"/>
</navigation>