<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/realtime_chart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/borders_titles"
                app:layout_constraintVertical_bias="0"
                android:layout_margin="15dp"
                />

        <LinearLayout
                android:id="@+id/borders_titles"
                app:layout_constraintTop_toBottomOf="@id/realtime_chart"
                app:layout_constraintBottom_toTopOf="@id/borders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/left_notification_border"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/right_notification_border"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/borders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/borders_titles"
                app:layout_constraintBottom_toTopOf="@id/actions"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintVertical_bias="1"
                >
            <NumberPicker
                    android:id="@+id/border_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            <NumberPicker
                    android:id="@+id/border_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal"
                android:visibility="gone">

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/save_button"
                    android:padding="10dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:id="@+id/reset_button"
                    android:padding="10dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>